# deprecated-matahari-bm

./: .gitignore  AUTHORS  CMakeLists.txt  CNAME  ChangeLog  GNUmakefile  Makefile  Makefile.am  README  README-hacking  README.markdown  README.mkd  aclocal.m4  autobuild.sh  autogen.sh  bootstrap.conf  configure.ac  cpu.cpp  cpu.h  hal.cpp  hal.h  host.cpp  host.h  main.cpp  matahari-broker.conf  matahari-broker.conf.in  matahari-broker.init.in  matahari-broker.service  matahari-broker.service.in  matahari-broker.sysconf  matahari-broker.sysconf.in  matahari-brokerd.in  matahari-policy.acl  matahari-sasl.conf.in  matahari-vios-proxy-guest.init.in  matahari-vios-proxy-guest.service.in  matahari-vios-proxy-host.init.in  matahari-vios-proxy-host.service.in  matahari-vios-proxy.sysconf.in  matahari.init  (+14 more)
src/: .gitignore  CMakeLists.txt  Makefile.am  check-policy.xsl  cpu.cpp  cpu.h  dbus-to-c.xsl  dbus-to-polkit.xsl  hal.cpp  hal.h  host.cpp  host.h  hostlistener.h  linux_platform.cpp  linux_platform.h  main.cpp  matahari-host.cpp  matahari-net.cpp  matahari-srv.cpp  mh_agent.cpp  networkdevice.cpp  networkdevice.h  nic.cpp  nic.h  platform.cpp  platform.h  processor.cpp  processor.h  processors.cpp  processors.h  processorslistener.h  schema-host.xml  schema-net.xml  schema-to-dbus.xsl  schema.xml  util.c  util.h
src/broker/: .gitignore  CMakeLists.txt  broker.c  broker.h  broker_federation.c  broker_federation.h  broker_linux.c  broker_os.h  broker_windows.c  matahari-brokerd.8
src/cmake/modules/: DBusMacros.cmake  FindMatahari.cmake  FindQPID.cmake  MatahariDBusMacros.cmake  MatahariMacros.cmake
src/common/: mh_dbus_common.c  mh_dbus_common.h  mh_gobject_class.h
src/config/: CMakeLists.txt  config-console.cpp  config-qmf.cpp  schema.xml
src/console/: CMakeLists.txt  config.cpp  console-qmf.cpp  matahari-console.cpp
src/host/: CMakeLists.txt  host-dbus.c  host-qmf.cpp  matahari-host-dbus-glue.h  matahari-host-dbus.c  matahari-host-dbus.xml  matahari-host-dbusd  matahari-host-properties.h  matahari-host.cpp  org.matahariproject.Host.conf  org.matahariproject.Host.policy  org.matahariproject.Host.service  org.matahariproject.host.conf  org.matahariproject.host.service  schema.xml
src/include/: config.h.in  matahari.h.in
src/include/fmci/: fmci-class.h  fmci-host-dbus.h  host.h
src/include/matahari/: agent.h  dbus_common.h  dnssrv.h  dnssrv_internal.h  errors.h  gobject_class.h  host.h  logging.h  mainloop.h  mh_agent.h  mh_agent_config.h  mh_dbus_common.h  network.h  postboot.h  processor.h  services.h  sysconfig.h  sysconfig_internal.h  utilities.h
src/lib/: .gitignore  CMakeLists.txt  dnssrv.c  dnssrv.h  dnssrv_linux.c  dnssrv_private.h  dnssrv_windows.c  doxygen.h  host.c  host.cpp  host_linux.c  host_private.h  host_windows.c  mainloop.c  mh_agent.cpp  mh_agent_config.c  mh_dbus_common.c  network.c  network_linux.c  network_private.h  network_windows.c  postboot.c  processor.cpp  services.c  services_linux.c  services_private.h  services_windows.c  sysconfig.c  sysconfig_linux.c  sysconfig_private.h  sysconfig_windows.c  utilities.c  utilities_linux.c  utilities_private.h  utilities_windows.c
src/mhsh/: mhsh
src/mhsh/matahari/: core.py  mode.py
src/mhsh/matahari/interpreter/: __init__.py  command.py  interpreter.py  mode.py
src/net/: CMakeLists.txt  matahari-net.cpp  matahari-network-dbus.c  org.matahariproject.Network.conf  org.matahariproject.Network.policy  org.matahariproject.Network.service  org.matahariproject.network.service
src/network/: CMakeLists.txt  network-dbus.c  network-qmf.cpp  org.matahariproject.Network.policy  org.matahariproject.Network.service  schema.xml
src/postboot/: CMakeLists.txt  postboot-console.cpp  postboot-qmf.cpp  schema.xml
src/qmf/: hostagent.cpp  hostagent.h  netagent.cpp  netagent.h  processoragent.cpp  processoragent.h  processorsagent.cpp  processorsagent.h
src/service/: CMakeLists.txt  matahari-services-dbus.c  matahari-srv.cpp  org.matahariproject.Resources.policy  org.matahariproject.Services.conf  org.matahariproject.Services.policy  org.matahariproject.Services.service  schema.xml  service-dbus.c  service-qmf-console.cpp  service-qmf.cpp
src/sysconfig/: CMakeLists.txt  org.matahariproject.Sysconfig.conf  org.matahariproject.Sysconfig.policy  org.matahariproject.Sysconfig.service  schema.xml  sysconfig-console.cpp  sysconfig-dbus.c  sysconfig-qmf.cpp
src/tests/: .gitignore  CMakeLists.txt  Makefile.am  README.txt  commonlib.sh  deps.sh  matahariTest.py  mh_api_host.h  mh_api_network.h  mh_api_network_unittest.h  mh_api_postboot.h  mh_api_sysconfig.h  mh_api_utilities.h  mh_hsa.h  mh_hsa_linux.h  mh_hsa_windows.h  mh_ssl_test.sh  mh_test_utilities.c  mh_test_utilities.h  t_dnssrv.c  t_ssl.sh  test_host_api.py  test_network_api.py  test_network_api_minimal.py  test_resource_api.py  test_service_api.py  test_service_api_minimal.py  test_sysconfig_api.py  test_utilities.c  testhostapis.cpp  testhostapis.h  testmultiplexer.cpp  testmultiplexer.h
src/tests/config-agent/: PURPOSE  mh_config_agent_is_configured.sh
src/tests/connection/: mh_simple_connect.sh
src/tests/hsa/: PURPOSE  README  create_dns_srv.rb  hsa_lib.rb
src/tests/ssl/: PURPOSE  mh_ssl_test.sh
src/unittests/: .gitignore  CMakeLists.txt  README  commonlib.sh  mh_api_host.h  mh_api_sysconfig.h  mh_api_sysconfig_common.h  mh_api_sysconfig_linux.h  mh_api_sysconfig_windows.h  mh_hsa_windows.h  mh_test_utilities.h
src/unittests/config-agent/: mh_config_agent_is_configured.sh
src/unittests/connection/: PURPOSE
src/unittests/hsa/fixtures/etc/: hosts  (+2 more)
src/unittests/ssl/: mh_ssl_test.sh
src/virtio/: multiplexer.cpp  multiplexer.h
src/windows/: autorun.inf  autorun.inf.in  install.bat  uninstall.bat  win_get_cpu_model.vbs  win_get_host_uuid.vbs
sys/: .gitignore  CMakeLists.txt  matahari-broker.conf.in  matahari-broker.init.in  matahari-broker.upstart.in  matahari-guest-agent.rules  matahari-vios-proxy-host.init.in  matahari-vios-proxy-host.service.in  matahari.init.in  matahari.service.in  matahari.sysconf.in  matahari.upstart.in
(+75 files in other folders)
